@@ -1,20 +1,27 @@
 package com.example.gameplatform.service;
 
 import com.example.gameplatform.model.User;
-import lombok.AllArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.*;
+import java.io.Serializable;
+import java.util.Collection;
+import java.util.Collections;
 
-@AllArgsConstructor
 public class SecurityUserDetails implements UserDetails {
 
     private final User user;
 
+    public SecurityUserDetails(User user) {
+        this.user = user;
+    }
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(() -> "ROLE_" + user.getRole().getName());
+        return Collections.singletonList(
+                new SimpleGrantedAuthority("ROLE_" + user.getRole().getName().toUpperCase())
+        );
     }
 
     @Override
@@ -27,12 +34,44 @@ public class SecurityUserDetails implements UserDetails {
         return user.getEmail();
     }
 
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
+    public String getFullName() {
+        return user.getName();
+    }
 
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
+    // Дополнительные методы для доступа к данным пользователя
     public Long getId() {
         return user.getId();
+    }
+
+    public String getRole() {
+        return user.getRole().getName();
+    }
+
+    public User getUser() {
+        return user;
+    }
+
+    public Serializable getBalance() {
+        return user.getBalance();
     }
 }
